--- a/app/src/main/res/values-en/wallet_strings.xml
+++ b/app/src/main/res/values-en/wallet_strings.xml
@@ -427,5 +427,7 @@
     <string name="wallet_upload_identity_information">Upload Identity Information</string>
 
 
+    <string name="wallet_Options">Options</string>
+
 
 </resources>
