--- a/app/src/main/res/layout/activity_collection_detail.xml
+++ b/app/src/main/res/layout/activity_collection_detail.xml
@@ -52,15 +52,18 @@
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_8"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginRight="@dimen/dp_20"
         android:textColor="@color/wallet_text_black"
         android:textSize="@dimen/font_sp_12"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:gravity="center"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/token_id"
-        tools:text="rare colorway" />
+        tools:text="ra orway" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,6 +73,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
+            android:id="@+id/send"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -90,6 +94,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/options"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
