--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -96,4 +96,7 @@
     <dimen name="dp_363">363dp</dimen>
     <dimen name="dp_96">96dp</dimen>
     <dimen name="dp_180">180dp</dimen>
+    <dimen name="dp_295">295dp</dimen>
+    <dimen name="dp_151">151dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
 </resources>
