--- a/app/src/main/res/layout/wallet_fragment_stassets.xml
+++ b/app/src/main/res/layout/wallet_fragment_stassets.xml
@@ -1,18 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:context=".assets.fragment.STAssetsFragment">
+
+    <TextView
+        android:id="@+id/assets_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
+        android:drawableRight="@mipmap/wallet_assets_right_arrow"
+        android:text="@string/wallet_assets"
+        android:textColor="@color/wallet_text_black"
+        android:textSize="@dimen/font_sp_20" />
 
     <include
         android:id="@+id/assets_prompt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_8"
         layout="@layout/wallet_assets_prompt" />
 
     <include
         android:id="@+id/st_content"
-        android:visibility="gone"
-        layout="@layout/wallet_st_main_view" />
+        layout="@layout/wallet_st_main_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_8"
+        android:visibility="gone" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
