--- a/app/src/main/res/layout/wallet_activity_auto_info.xml
+++ b/app/src/main/res/layout/wallet_activity_auto_info.xml
@@ -1,9 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/wallet_color_f5f5f5"
+    android:orientation="vertical"
     tools:context=".auth.AutoInfoActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/title"
+        layout="@layout/wallet_common_title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="48dp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.idhub.wallet.auth.InformationContentView
+                android:id="@+id/base_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_16"
+                android:layout_marginRight="@dimen/dp_12"
+                app:layout_constraintTop_toBottomOf="@id/title" />
+
+            <com.idhub.wallet.auth.InformationContentView
+                android:id="@+id/identity_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_16"
+                android:layout_marginRight="@dimen/dp_12"
+                app:layout_constraintTop_toBottomOf="@id/title" />
+
+            <com.idhub.wallet.auth.InformationContentView
+                android:id="@+id/taxpayer_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_16"
+                android:layout_marginRight="@dimen/dp_12"
+                app:layout_constraintTop_toBottomOf="@id/title" />
+
+            <com.idhub.wallet.auth.InformationContentView
+                android:id="@+id/credit_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_16"
+                android:layout_marginRight="@dimen/dp_12"
+                app:layout_constraintTop_toBottomOf="@id/title" />
+
+            <com.idhub.wallet.auth.InformationContentView
+                android:id="@+id/address_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_16"
+                android:layout_marginRight="@dimen/dp_12"
+                app:layout_constraintTop_toBottomOf="@id/title" />
+
+            <com.idhub.wallet.auth.InformationContentView
+                android:id="@+id/assets_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_16"
+                android:layout_marginRight="@dimen/dp_12"
+                android:layout_marginBottom="@dimen/dp_20"
+                app:layout_constraintTop_toBottomOf="@id/title" />
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
