--- a/app/src/main/res/layout/wallet_fragment_collectibles.xml
+++ b/app/src/main/res/layout/wallet_fragment_collectibles.xml
@@ -1,32 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/wallet_color_f5f5f5"
     tools:context=".assets.fragment.CollectiblesFragment">
 
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/recycler_view"
-       android:layout_width="match_parent"
-       app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintLeft_toLeftOf="parent"
-       app:layout_constraintRight_toRightOf="parent"
-       android:layout_marginLeft="@dimen/dp_8"
-       android:layout_marginRight="@dimen/dp_8"
-       android:layout_height="wrap_content"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_8"
+        android:layout_marginRight="@dimen/dp_8"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-   <TextView
-       android:id="@+id/opensea_link"
-       android:paddingTop="16dp"
-       android:visibility="gone"
-       android:textSize="@dimen/font_sp_16"
-       android:textColor="@color/wallet_main_yellow_color"
-       android:paddingBottom="16dp"
-       android:gravity="center"
-       android:text="@string/find_more_on_opensea"
-       app:layout_constraintTop_toBottomOf="@id/recycler_view"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content" />
+    <LinearLayout
+        android:id="@+id/empty_collection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_27"
+            android:src="@mipmap/wallet_collection_empty_bg" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:text="@string/find_more_on_opensea"
+            android:textColor="@color/wallet_main_yellow_color"
+            android:textSize="@dimen/font_sp_16"
+            app:layout_constraintTop_toBottomOf="@id/recycler_view" />
+    </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/opensea_link"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:text="@string/find_more_on_opensea"
+        android:textColor="@color/wallet_main_yellow_color"
+        android:textSize="@dimen/font_sp_16"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/recycler_view" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
