--- a/app/src/main/res/values/wallet_colors.xml
+++ b/app/src/main/res/values/wallet_colors.xml
@@ -71,4 +71,5 @@
     <color name="wallet_color_31B27A">#31B27A</color>
     <color name="wallet_color_E8E8E8">#E8E8E8</color>
     <color name="wallet_color_D9D9D9">#D9D9D9</color>
+    <color name="wallet_color_202020">#202020</color>
 </resources>
