--- a/app/src/main/res/layout/wallet_identity_information_layout.xml
+++ b/app/src/main/res/layout/wallet_identity_information_layout.xml
@@ -57,12 +57,12 @@
     <com.idhub.wallet.auth.InformationFileLayout
         android:id="@+id/passport_file"
         android:layout_width="@dimen/dp_313"
-        android:layout_height="@dimen/dp_42"
+        android:layout_height="@dimen/dp_114"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/dp_7" />
 
     <TextView
-        android:id="@+id/base_info_save"
+        android:id="@+id/info_save"
         android:layout_width="@dimen/dp_313"
         android:layout_height="@dimen/dp_40"
         android:layout_gravity="center"
