--- a/app/src/main/res/layout/wallet_base_information_layout.xml
+++ b/app/src/main/res/layout/wallet_base_information_layout.xml
@@ -33,6 +33,7 @@
         android:textSize="@dimen/font_sp_14" />
 
     <RadioGroup
+        android:id="@+id/gender_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_16"
@@ -89,12 +90,16 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_phone_dialing_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_16"
-            android:minWidth="40dp"
             android:text="+" />
+
+        <TextView
+            android:id="@+id/tv_phone_dialing_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="40dp" />
 
         <EditText
             android:id="@+id/phone"
