--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -99,4 +99,5 @@
     <dimen name="dp_295">295dp</dimen>
     <dimen name="dp_151">151dp</dimen>
     <dimen name="dp_80">80dp</dimen>
+    <dimen name="dp_114">114dp</dimen>
 </resources>
