--- a/app/src/main/res/values/wallet_strings.xml
+++ b/app/src/main/res/values/wallet_strings.xml
@@ -420,4 +420,7 @@
     <string name="credit_information">信用信息</string>
     <string name="address_information">地址信息</string>
     <string name="assets_information">资产证明</string>
+    <string name="phone_area_id">区号</string>
+    <string name="wallet_upload_finish">上传完成</string>
+
 </resources>
