--- a/app/src/main/res/layout/wallet_activity_qr_code.xml
+++ b/app/src/main/res/layout/wallet_activity_qr_code.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".common.zxinglib.QrCodeActivity">
 
-
-
     <cn.bingoogolapple.qrcode.zxing.ZXingView
         android:id="@+id/zxingview"
         android:layout_width="match_parent"
@@ -15,13 +13,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toTopOf="parent"
         app:qrcv_animTime="1000"
         app:qrcv_barCodeTipText="将条码放入框内，即可自动扫描"
         app:qrcv_barcodeRectHeight="120dp"
         app:qrcv_borderColor="@android:color/white"
         app:qrcv_borderSize="1dp"
-        app:qrcv_cornerColor="@color/colorPrimaryDark"
+        app:qrcv_cornerColor="@color/wallet_main_yellow_color"
         app:qrcv_cornerDisplayType="center"
         app:qrcv_cornerLength="20dp"
         app:qrcv_cornerSize="3dp"
@@ -38,31 +36,30 @@
         app:qrcv_maskColor="#33FFFFFF"
         app:qrcv_qrCodeTipText="@string/scan_device_zing"
         app:qrcv_rectWidth="200dp"
-        app:qrcv_scanLineColor="@color/colorPrimaryDark"
+        app:qrcv_scanLineColor="@color/wallet_main_yellow_color"
         app:qrcv_scanLineMargin="0dp"
         app:qrcv_scanLineSize="0.5dp"
         app:qrcv_tipTextColor="@android:color/white"
         app:qrcv_tipTextSize="12sp"
-        app:qrcv_toolbarHeight="56dp"
+        app:qrcv_toolbarHeight="166dp"
         app:qrcv_topOffset="65dp"
         app:qrcv_verticalBias="-1" />
-
-    <include
-        android:id="@+id/title"
-        layout="@layout/wallet_common_title_layout"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
+    <ImageView
+        android:id="@+id/back_icon"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="45dp"
+        android:src="@mipmap/wallet_qr_code_back_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <View
         android:id="@+id/capture_view"
         android:layout_width="38dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginTop="500dp"
         android:background="@drawable/wallet_icon_light"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
