--- a/app/src/main/res/layout/information_file_layout.xml
+++ b/app/src/main/res/layout/information_file_layout.xml
@@ -16,8 +16,8 @@
     <ImageView
         android:id="@+id/file"
         android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
