--- a/app/src/main/res/layout/wallet_collection_grid_item_view.xml
+++ b/app/src/main/res/layout/wallet_collection_grid_item_view.xml
@@ -12,7 +12,7 @@
         android:layout_width="@dimen/dp_164"
         android:layout_height="wrap_content"
         android:scaleType="center"
-        android:src="@mipmap/ceshi"
+        android:src="@mipmap/collection_default"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
