--- a/app/src/main/res/layout/wallet_manage_item_view.xml
+++ b/app/src/main/res/layout/wallet_manage_item_view.xml
@@ -6,43 +6,32 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/ct_address_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="72dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="10dp"
-        android:background="@mipmap/wallet_wallet_fragmentbackground">
+        android:background="@mipmap/collection_item_bg">
 
         <TextView
             android:id="@+id/wallet_name"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="32dp"
             android:layout_marginTop="15dp"
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/wallet_black"
-            android:textSize="14sp"
+            android:textSize="@dimen/font_sp_16"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="wallet_name" />
 
-        <View
-            android:id="@+id/middle_line"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            app:layout_constraintTop_toBottomOf="@id/wallet_name"
-            android:layout_marginTop="10dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
 
         <ImageView
             android:id="@+id/upgrade_icon"
-            android:src="@mipmap/wallet_upgrade_black_icon"
+            android:src="@mipmap/wallet_manager_upgrade_icon"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -55,17 +44,15 @@
             android:id="@+id/wallet_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:layout_marginTop="7dp"
             android:layout_marginBottom="15dp"
             android:ellipsize="middle"
             android:singleLine="true"
             android:text="0x14o37492738624924hfsd727624"
             android:textColor="@color/wallet_text_deep_gray_color"
-            android:textSize="11sp"
+            android:textSize="@dimen/font_sp_14"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/middle_line"
+            app:layout_constraintLeft_toLeftOf="@id/wallet_name"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
@@ -74,11 +61,11 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:text="@string/wallet_default_address"
-            android:textColor="@color/wallet_main_blue_color"
+            android:textColor="@color/wallet_main_yellow_color"
             android:textSize="11sp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/middle_line"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@id/wallet_name"
+            app:layout_constraintLeft_toRightOf="@id/wallet_name"
+            app:layout_constraintTop_toTopOf="@id/wallet_name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.idhub.wallet.wallet.manager.WalletManageItemView>
